add initial styling and fixture data

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1,5 +1,17 @@
-// this is where our css goes
+ /*this is where our css goes*/
 
 body {
   background: #bbb;
+}
+
+#one {
+  background: blue;
+}
+
+#two {
+  background: green;
+}
+
+#three {
+  background: purple
 }
