--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,28 @@
-<h2 id="title">Welcome to Mood-Detangler!</h2>
+<div class="container">
 
-{{outlet}}
+  <div class="row">
+    <div class="col-md-12" id="one">
+      <h1 id="title">Mood-Detangler!</h1>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-3" id="two">
+      <ul class="list-unstyled">
+        <li>Selection 1</li>
+        <li>Selection 2</li>
+      </ul>
+    </div>
+
+    <div class="col-md-9" id="three">
+      <p>Cake bonbon chupa chups chocolate bar dessert apple pie tart soufflé powder. Sweet bonbon pastry cake donut ice cream sugar plum muffin biscuit. Liquorice donut jujubes. Cheesecake cheesecake toffee chupa chups jujubes cake. Biscuit toffee pie. Dragée lemon drops gummies chocolate sweet. Jelly sweet lemon drops cotton candy jelly jelly candy croissant. Donut fruitcake brownie candy canes donut jelly-o. Marzipan pie marshmallow pudding ice cream cake ice cream. Candy canes dessert croissant muffin sugar plum cake candy canes pastry.</p>
+
+      <p>Macaroon chocolate bar chocolate. Cupcake chocolate cake toffee candy candy cotton candy marzipan cheesecake. Marshmallow lollipop chupa chups carrot cake gingerbread wafer sesame snaps chocolate cotton candy. Biscuit jelly-o muffin wafer marzipan. Cake dragée pie. Cake jelly-o gummies chocolate cupcake topping dessert.</p>
+
+      <p>Marzipan pudding marzipan muffin cake chocolate brownie cupcake lemon drops. Cotton candy gingerbread tootsie roll chocolate. Sugar plum fruitcake pie jujubes cake. Halvah bear claw tart sesame snaps sweet dessert powder. Sesame snaps gummi bears wafer toffee. Dessert powder pastry candy pie caramels. Pudding soufflé powder chocolate bar liquorice. Halvah sweet jelly beans bear claw. Jelly chupa chups cake. Dessert gummies oat cake tootsie roll cookie lollipop tart macaroon.</p>
+      
+      {{outlet}}
+    </div>
+  </div>
+
+</div>
