add template and controller for adding new entries

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -9,8 +9,7 @@
   <div class="row">
     <div class="col-md-3" id="two">
       <ul class="list-unstyled">
-        <li>Selection 1</li>
-        <li>Selection 2</li>
+        <li>{{#link-to 'add-entry'}}Add Entry{{/link-to}}</li>
       </ul>
     </div>
 
