Finally found out how to access model properties from the controller.

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -10,6 +10,7 @@
     <div class="col-md-3" id="two">
       <ul class="list-unstyled">
         <li>{{#link-to 'add-entry'}}Add Entry{{/link-to}}</li>
+        <li>{{#link-to 'relations'}}Relationships{{/link-to}}</li>
       </ul>
     </div>
 
