Add basic correlation logic and update fixture data to illustrate prototype better.

--- a/app/templates/relations.hbs
+++ b/app/templates/relations.hbs
@@ -1,2 +1,2 @@
 <!-- {{outlet}} -->
-<button {{action 'pullData'}} class="btn btn-primary">Press me</button>
+<button {{action 'commonMoodActivityPairs'}} class="btn btn-primary">Press me</button>
