--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -2,14 +2,15 @@
 
   <div class="row">
     <div class="col-md-12" id="one">
-      <h1 id="title">Mood-Detangler!</h1>
+      <h1 id="title"><span id="title1">Mood</span><span id="title2">|Detangler</span></h1>
     </div>
   </div>
 
   <div class="row">
     <div class="col-md-3" id="two">
       <ul class="list-unstyled">
-        <li>{{#link-to 'add-entry'}}Add Entry{{/link-to}}</li>
+        <li>{{#link-to 'entries'}}All Entries{{/link-to}}</li>
+        <li>{{#link-to 'add-entry'}}New Entry{{/link-to}}</li>
         <li>{{#link-to 'relations'}}Relationships{{/link-to}}</li>
       </ul>
     </div>
