--- a/app/templates/relations.hbs
+++ b/app/templates/relations.hbs
@@ -1,2 +1,4 @@
-<!-- {{outlet}} -->
-<button {{action 'commonMoodActivityPairs'}} class="btn btn-primary">Press me</button>
+<div class="col-md-12 centered">
+  <h3>Check out the console for details.</h3>
+  <p><button {{action 'commonMoodActivityPairs'}} class="btn btn-default">Basic Data Correlation Demo</button></p>
+</div>
