--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -10,6 +10,34 @@
   cursor: pointer;
 }
 
+body {
+  font-family: 'Source Code Pro';
+}
+
+h1, h2, h3, h4 {
+  color: #FFF;
+}
+
+h1 {
+  font-size: 48px;
+}
+
+.centered {
+  text-align: center;
+}
+
+.well {
+  background: #BADBE7;
+}
+
+#title1 {
+  font-family: 'Flavors', cursive;
+}
+
+h3, #title2 {
+  font-family: 'Oleo Script Swash Caps', cursive;
+}
+
 #one {
   background: #C3EE74;
 }
